--- a/Tensor_basics.ipynb
+++ b/Tensor_basics.ipynb
@@ -53,8 +53,7 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "import numpy as np\n",
-        "asdasdas"
+        "import numpy as np\n"
       ],
       "metadata": {
         "id": "9M7GniiD_HDg"
