--- a/simple_neural_network.ipynb
+++ b/simple_neural_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlckm1qAkS91ndDMLOuEPy",
+      "authorship_tag": "ABX9TyOLka8DcULSDvxeioh8AbEt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "xzg4KbtI6BxU"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a Model Class that inherits nn.module\n",
+        "class Model(nn.Module):\n",
+        "  # Input layer (4 features of the flower) -->\n",
+        "  # Hidden Layer1 (number of neurons)-->\n",
+        "  # H2 (n) -->\n",
+        "  # output (3 classes of iris flowers)\n",
+        "  def __init__(self, in_features, h1 = 8, h2 = 9, output_features =3):\n",
+        "    self.fc1 = nn.Linear(in_features, h1)\n",
+        "    self.fc2 = nn.Linear(h1, h2)\n",
+        "    self.out = nn.Linear(h2, output_features)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = F.relu(self.fc1(x)) # if it is less than 0 it is 0\n",
+        "    x = F.relu(self.fc2(x))\n",
+        "    x = self.out(x)\n",
+        "\n",
+        "    return x\n"
+      ],
+      "metadata": {
+        "id": "CM_vHxgGRBDw"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "76uCGRfaRJZQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
